# sapio

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  anki_backend.py  api.py  bilan.py  cards.py  cli.py  extract.py  models.py  pdf.py  review.py  settings.py  web.py  wsgi.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  Bilan.tsx  CreateCards.tsx  DeckBrowser.tsx  DeckPicker.tsx  Logo.tsx  Settings.tsx  api.ts  main.tsx  styles.css
sapio/: __main__.py  cli.py  history.py  review.py  wsgi.py
sapio/frontend/: package.json
